Finalized app and deployed with surge

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         "jammming",
         "scrollbar",
         "spotify",
-        "tracklist"
+        "tracklist",
+        "webfonts"
     ]
 }
